--- a/index.html
+++ b/index.html
@@ -600,6 +600,9 @@
             <span class="block transition-all duration-300 ease-out group-hover:-translate-y-full">
               Built with ChatGPT 5 Pro Codex.
             </span>
+            <span class="block absolute top-full left-0 transition-all duration-300 ease-out group-hover:-translate-y-full">
+              (I'm good with programs, not programming)
+            </span>
           </div>
         </div>
         <span class="opacity-75">© <span id="year"></span> Oscar Beckett</span>
