--- a/index.html
+++ b/index.html
@@ -598,13 +598,9 @@
           <i data-lucide="link-2" class="h-3.5 w-3.5"></i>
           <div class="relative overflow-hidden">
             <span class="block transition-all duration-300 ease-out group-hover:-translate-y-full">
-              Built with ChatGPT 5 Pro Codex.
-            </span>
-            <span class="block absolute top-full left-0 transition-all duration-300 ease-out group-hover:-translate-y-full">
-              (I'm good with programs, not programming)
-            </span>
-          </div>
-        </div>
+              Built with vibe coding
+             </span>
+           </div>
         <span class="opacity-75">© <span id="year"></span> Oscar Beckett</span>
       </footer>
     </main>
