--- a/index.html
+++ b/index.html
@@ -532,21 +532,36 @@
             </div>
           </section>
 
-          <!-- REFERENCES -->
-          <section id="references" class="tab-page grid gap-4 md:grid-cols-2 hidden">
-            <div class="glass-card">
-              <div class="mb-3 flex items-center justify-between gap-3">
-                <div class="flex w-full items-center justify-between gap-3">
-                  <h3 class="text-base font-semibold tracking-tight text-white/95">
-                    Rachel Beckett
-                  </h3>
-                  <span class="shrink-0 rounded-lg bg-white/10 px-2 py-1 text-xs text-slate-300 ring-1 ring-white/20">
-                    Mother
-                  </span>
-                </div>
-              </div>
-              <p class="text-sm text-slate-200/90">Available on request</p>
-            </div>
+         <!-- REFERENCES -->
+<section id="references" class="tab-page grid gap-4 md:grid-cols-2 hidden">
+  <div class="glass-card">
+    <div class="mb-3 flex items-center justify-between gap-3">
+      <div class="flex w-full items-center justify-between gap-3">
+        <h3 class="text-base font-semibold tracking-tight text-white/95">
+          Matthew Gard
+        </h3>
+        <span class="shrink-0 rounded-lg bg-white/10 px-2 py-1 text-xs text-slate-300 ring-1 ring-white/20">
+          Teacher
+        </span>
+      </div>
+    </div>
+    <p class="text-sm text-slate-200/90">Available on request</p>
+  </div>
+
+  <div class="glass-card">
+    <div class="mb-3 flex items-center justify-between gap-3">
+      <div class="flex w-full items-center justify-between gap-3">
+        <h3 class="text-base font-semibold tracking-tight text-white/95">
+          Employers &amp; Team Leaders
+        </h3>
+        <span class="shrink-0 rounded-lg bg-white/10 px-2 py-1 text-xs text-slate-300 ring-1 ring-white/20">
+          Workplace supervisors
+        </span>
+      </div>
+    </div>
+    <p class="text-sm text-slate-200/90">Available on request</p>
+  </div>
+</section>
 
             <div class="glass-card">
               <div class="mb-3 flex items-center justify-between gap-3">
@@ -593,16 +608,10 @@
       </div>
 
       <!-- Footer -->
-      <footer class="flex items-center justify-between px-1 text-xs text-slate-400/80">
-        <div class="flex items-center gap-2 cursor-pointer group">
-          <i data-lucide="link-2" class="h-3.5 w-3.5"></i>
-          <div class="relative overflow-hidden">
-            <span class="block transition-all duration-300 ease-out group-hover:-translate-y-full">
-              Built with vibe coding
-             </span>
-           </div>
-        <span class="opacity-75">© <span id="year"></span> Oscar Beckett</span>
-      </footer>
+     <footer class="flex items-center justify-end px-1 text-xs text-slate-400/80">
+  <span class="opacity-75">© <span id="year"></span> Oscar Beckett</span>
+</footer>
+
     </main>
   </div>
 
