--- a/index.html
+++ b/index.html
@@ -355,3 +355,261 @@
                   2013 – 2019
                 </span>
               </button>
+              <div class="js-morph-details hidden px-5 py-5">
+                <div class="mb-3 flex flex-col gap-1 sm:flex-row sm:items-center sm:justify-between">
+                  <h3 class="text-base font-semibold tracking-tight text-white/95">
+                    Primary School
+                  </h3>
+                  <div class="flex flex-wrap items-center gap-2 text-xs">
+                    <span class="rounded-lg bg-white/10 px-2 py-1 text-slate-300 ring-1 ring-white/20">
+                      Ascot State School, Brisbane
+                    </span>
+                    <span class="rounded-lg bg-white/10 px-2 py-1 text-slate-300 ring-1 ring-white/20">
+                      2013 – 2019
+                    </span>
+                  </div>
+                </div>
+                <p class="text-sm text-slate-200/90">
+                  Core subjects, ensembles incl. Senior Band, Brass Ensemble, Stage Band (AMEB L4).
+                </p>
+              </div>
+            </div>
+
+            <!-- Skills Snapshot -->
+            <div class="glass-card md:col-span-2">
+              <div class="mb-3 flex items-center justify-between gap-3">
+                <div class="flex w-full items-center justify-between gap-3">
+                  <h3 class="text-base font-semibold tracking-tight text-white/95">
+                    Skills Snapshot
+                  </h3>
+                  <span class="shrink-0 rounded-lg bg-white/10 px-2 py-1 text-xs text-slate-300 ring-1 ring-white/20">
+                    Updated
+                  </span>
+                </div>
+              </div>
+              <div class="flex flex-wrap justify-center gap-2 text-sm text-slate-200/90">
+                <span class="skill-pill">Teamwork</span>
+                <span class="skill-pill">Leadership</span>
+                <span class="skill-pill">Communication</span>
+                <span class="skill-pill">Planning</span>
+                <span class="skill-pill">Technology (IT &amp; hardware)</span>
+                <span class="skill-pill">Customer Service</span>
+                <span class="skill-pill">Time Management</span>
+                <span class="skill-pill">Problem Solving</span>
+                <span class="skill-pill">Basic Japanese</span>
+              </div>
+            </div>
+          </section>
+
+          <!-- HOBBIES -->
+          <section id="hobbies" class="tab-page grid gap-4 md:grid-cols-2 hidden">
+            <!-- Hobby 1 -->
+            <div class="js-morph-card group overflow-hidden rounded-2xl bg-white/10 p-0 ring-1 ring-white/20 backdrop-blur-xl shadow-[0_10px_40px_-10px_rgba(0,0,0,0.6)] transition-transform">
+              <button class="js-morph-summary flex w-full items-center justify-between gap-3 px-5 py-4">
+                <h3 class="truncate text-base font-semibold tracking-tight text-white/95">
+                  Scouting &amp; Leadership
+                </h3>
+                <span class="shrink-0 rounded-lg bg-white/10 px-2 py-1 text-xs text-slate-300 ring-1 ring-white/20">
+                  Awards
+                </span>
+              </button>
+              <div class="js-morph-details hidden px-5 py-5">
+                <div class="mb-3 flex items-center justify-between gap-2">
+                  <h3 class="text-base font-semibold tracking-tight text-white/95">
+                    Scouting &amp; Leadership
+                  </h3>
+                  <span class="shrink-0 rounded-lg bg-white/10 px-2 py-1 text-xs text-slate-300 ring-1 ring-white/20">
+                    Awards
+                  </span>
+                </div>
+                <p class="text-sm text-slate-200/90">
+                  Grey Wolf Award (2018), Australian Scout Medallion (2022), King’s Scout Award (2025).
+                  Venturer service leader at Australian Jamboree 2025. Regularly plan and run activities.
+                </p>
+              </div>
+            </div>
+
+            <!-- Hobby 2 -->
+            <div class="js-morph-card group overflow-hidden rounded-2xl bg-white/10 p-0 ring-1 ring-white/20 backdrop-blur-xl shadow-[0_10px_40px_-10px_rgba(0,0,0,0.6)] transition-transform">
+              <button class="js-morph-summary flex w-full items-center justify-between gap-3 px-5 py-4">
+                <h3 class="truncate text-base font-semibold tracking-tight text-white/95">
+                  Baseball
+                </h3>
+                <span class="shrink-0 rounded-lg bg-white/10 px-2 py-1 text-xs text-slate-300 ring-1 ring-white/20">
+                  Club &amp; Rep
+                </span>
+              </button>
+              <div class="js-morph-details hidden px-5 py-5">
+                <div class="mb-3 flex items-center justify-between gap-2">
+                  <h3 class="text-base font-semibold tracking-tight text-white/95">
+                    Baseball
+                  </h3>
+                  <span class="shrink-0 rounded-lg bg-white/10 px-2 py-1 text-xs text-slate-300 ring-1 ring-white/20">
+                    Club &amp; Rep
+                  </span>
+                </div>
+                <p class="text-sm text-slate-200/90">
+                  Playing since 2016; state/national representative level since 2017. Premier team for Windsor Royals
+                  Senior League 2023/24 season.
+                </p>
+              </div>
+            </div>
+
+            <!-- Hobby 3 -->
+            <div class="js-morph-card group overflow-hidden rounded-2xl bg-white/10 p-0 ring-1 ring-white/20 backdrop-blur-xl shadow-[0_10px_40px_-10px_rgba(0,0,0,0.6)] transition-transform">
+              <button class="js-morph-summary flex w-full items-center justify-between gap-3 px-5 py-4">
+                <h3 class="truncate text-base font-semibold tracking-tight text-white/95">
+                  Mountain Biking &amp; Cycle Touring
+                </h3>
+                <span class="shrink-0 rounded-lg bg-white/10 px-2 py-1 text-xs text-slate-300 ring-1 ring-white/20">
+                  Outdoors
+                </span>
+              </button>
+              <div class="js-morph-details hidden px-5 py-5">
+                <div class="mb-3 flex items-center justify-between gap-2">
+                  <h3 class="text-base font-semibold tracking-tight text-white/95">
+                    Mountain Biking &amp; Cycle Touring
+                  </h3>
+                  <span class="shrink-0 rounded-lg bg-white/10 px-2 py-1 text-xs text-slate-300 ring-1 ring-white/20">
+                    Outdoors
+                  </span>
+                </div>
+                <p class="text-sm text-slate-200/90">
+                  BVRT completed three times; introducing bikepacking to Scouts and peers.
+                </p>
+              </div>
+            </div>
+
+            <!-- Hobby 4 -->
+            <div class="js-morph-card group overflow-hidden rounded-2xl bg-white/10 p-0 ring-1 ring-white/20 backdrop-blur-xl shadow-[0_10px_40px_-10px_rgba(0,0,0,0.6)] transition-transform">
+              <button class="js-morph-summary flex w-full items-center justify-between gap-3 px-5 py-4">
+                <h3 class="truncate text-base font-semibold tracking-tight text-white/95">
+                  Karate (Go-Kan-Ryu)
+                </h3>
+                <span class="shrink-0 rounded-lg bg-white/10 px-2 py-1 text-xs text-slate-300 ring-1 ring-white/20">
+                  Brown Belt
+                </span>
+              </button>
+              <div class="js-morph-details hidden px-5 py-5">
+                <div class="mb-3 flex items-center justify-between gap-2">
+                  <h3 class="text-base font-semibold tracking-tight text-white/95">
+                    Karate (Go-Kan-Ryu)
+                  </h3>
+                  <span class="shrink-0 rounded-lg bg-white/10 px-2 py-1 text-xs text-slate-300 ring-1 ring-white/20">
+                    Brown Belt
+                  </span>
+                </div>
+                <p class="text-sm text-slate-200/90">
+                  Training since 2011; assisting in junior dojo sessions and working toward 1st Black Tip.
+                </p>
+              </div>
+            </div>
+
+            <!-- Hobby 5 -->
+            <div class="js-morph-card group overflow-hidden rounded-2xl bg-white/10 p-0 ring-1 ring-white/20 backdrop-blur-xl shadow-[0_10px_40px_-10px_rgba(0,0,0,0.6)] transition-transform">
+              <button class="js-morph-summary flex w-full items-center justify-between gap-3 px-5 py-4">
+                <h3 class="truncate text-base font-semibold tracking-tight text-white/95">
+                  CAD and 3D Printing
+                </h3>
+                <span class="shrink-0 rounded-lg bg-white/10 px-2 py-1 text-xs text-slate-300 ring-1 ring-white/20">
+                  Maker
+                </span>
+              </button>
+              <div class="js-morph-details hidden px-5 py-5">
+                <div class="mb-3 flex items-center justify-between gap-2">
+                  <h3 class="text-base font-semibold tracking-tight text-white/95">
+                    CAD and 3D Printing
+                  </h3>
+                  <span class="shrink-0 rounded-lg bg-white/10 px-2 py-1 text-xs text-slate-300 ring-1 ring-white/20">
+                    Maker
+                  </span>
+                </div>
+                <p class="text-sm text-slate-200/90">
+                  Owner of a Bambu Labs A1, and enjoy using Autodesk Inventor and Blender to create new things to be
+                  printed.
+                </p>
+              </div>
+            </div>
+          </section>
+
+          <!-- REFERENCES -->
+          <section id="references" class="tab-page grid gap-4 md:grid-cols-2 hidden">
+            <div class="glass-card">
+              <div class="mb-3 flex items-center justify-between gap-3">
+                <div class="flex w-full items-center justify-between gap-3">
+                  <h3 class="text-base font-semibold tracking-tight text-white/95">
+                    Rachel Beckett
+                  </h3>
+                  <span class="shrink-0 rounded-lg bg-white/10 px-2 py-1 text-xs text-slate-300 ring-1 ring-white/20">
+                    Mother
+                  </span>
+                </div>
+              </div>
+              <p class="text-sm text-slate-200/90">Available on request</p>
+            </div>
+
+            <div class="glass-card">
+              <div class="mb-3 flex items-center justify-between gap-3">
+                <div class="flex w-full items-center justify-between gap-3">
+                  <h3 class="text-base font-semibold tracking-tight text-white/95">
+                    Employers &amp; Team Leaders
+                  </h3>
+                  <span class="shrink-0 rounded-lg bg-white/10 px-2 py-1 text-xs text-slate-300 ring-1 ring-white/20">
+                    Workplace supervisors
+                  </span>
+                </div>
+              </div>
+              <p class="text-sm text-slate-200/90">Available on request</p>
+            </div>
+          </section>
+
+          <!-- DOWNLOAD -->
+          <section id="download" class="tab-page grid gap-4 md:grid-cols-2 hidden">
+            <div class="glass-card md:col-span-2">
+              <div class="mb-3 flex items-center justify-between gap-3">
+                <div class="flex w-full items-center justify-between gap-3">
+                  <h3 class="text-base font-semibold tracking-tight text-white/95">
+                    Download my resume (Oscar_Beckett_CV_2.docx)
+                  </h3>
+                  <span class="shrink-0 rounded-lg bg-white/10 px-2 py-1 text-xs text-slate-300 ring-1 ring-white/20">
+                    Printable
+                  </span>
+                </div>
+              </div>
+              <p class="mb-4 text-sm text-slate-200/90">
+                Click below to download the Word document version of my resume.
+              </p>
+              <a
+                href="Oscar_Beckett_CV_2.docx"
+                download
+                class="inline-flex items-center gap-2 rounded-xl bg-white/90 px-4 py-2 font-medium text-slate-900 ring-1 ring-white/30 transition hover:bg-white"
+              >
+                <i data-lucide="download" class="h-4 w-4"></i>
+                Download Resume
+              </a>
+            </div>
+          </section>
+        </div>
+      </div>
+
+      <!-- Footer -->
+      <footer class="flex items-center justify-between px-1 text-xs text-slate-400/80">
+        <div class="flex items-center gap-2 cursor-pointer group">
+          <i data-lucide="link-2" class="h-3.5 w-3.5"></i>
+          <div class="relative overflow-hidden">
+            <span class="block transition-all duration-300 ease-out group-hover:-translate-y-full">
+              Built with ChatGPT 5 Pro Codex.
+            </span>
+            <span class="block absolute top-full left-0 transition-all duration-300 ease-out group-hover:-translate-y-full">
+              (I'm good with programs, not programming)
+            </span>
+          </div>
+        </div>
+        <span class="opacity-75">© <span id="year"></span> Oscar Beckett</span>
+      </footer>
+    </main>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
