--- a/index.html
+++ b/index.html
@@ -538,10 +538,10 @@
               <div class="mb-3 flex items-center justify-between gap-3">
                 <div class="flex w-full items-center justify-between gap-3">
                   <h3 class="text-base font-semibold tracking-tight text-white/95">
-                    Rachel Beckett
+                    Matthew Gard
                   </h3>
                   <span class="shrink-0 rounded-lg bg-white/10 px-2 py-1 text-xs text-slate-300 ring-1 ring-white/20">
-                    Mother
+                    Teacher
                   </span>
                 </div>
               </div>
