--- a/index.html
+++ b/index.html
@@ -175,7 +175,9 @@
             <div class="glass-card">
               <div class="mb-3 flex items-center justify-between gap-3">
                 <div class="flex w-full items-center justify-between gap-3">
-                  <h3 class="text-base font-semibold tracking-tight text-white/95">About Me</h3>
+                  <h3 class="text-base font-semibold tracking-tight text-white/95">
+                    About Me
+                    </h3>
                   <span class="shrink-0 rounded-lg bg-white/10 px-2 py-1 text-xs text-slate-300 ring-1 ring-white/20">
                     At a Glance
                   </span>
@@ -226,7 +228,6 @@
                 </ul>
               </div>
             </div>
-
             <!-- Job 2 -->
             <div class="js-morph-card group overflow-hidden rounded-2xl bg-white/10 p-0 ring-1 ring-white/20 backdrop-blur-xl shadow-[0_10px_40px_-10px_rgba(0,0,0,0.6)] transition-transform">
               <button class="js-morph-summary flex w-full items-center justify-between gap-3 px-5 py-4">
