--- a/index.html
+++ b/index.html
@@ -540,8 +540,8 @@
                 <section id="page-references" class="page-panel hidden-panel grid gap-4 md:grid-cols-2">
                   <div class="rounded-2xl bg-white/10 p-5 ring-1 ring-white/20 backdrop-blur-xl shadow-[0_10px_40px_-10px_rgba(0,0,0,0.6)]">
                     <div class="mb-3 flex items-center justify-between gap-3">
-                      <h3 class="text-base font-semibold tracking-tight text-white/95">Rachel Beckett</h3>
-                      <span class="shrink-0 rounded-lg bg-white/10 px-2 py-1 text-xs text-slate-300 ring-1 ring-white/20">Mother</span>
+                      <h3 class="text-base font-semibold tracking-tight text-white/95">Kedron State High School</h3>
+                      <span class="shrink-0 rounded-lg bg-white/10 px-2 py-1 text-xs text-slate-300 ring-1 ring-white/20">Teachers</span>
                     </div>
                     <p class="text-sm text-slate-200/90">Available on request.</p>
                   </div>
