--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
                       <span class="shrink-0 rounded-lg bg-white/10 px-2 py-1 text-xs text-slate-300 ring-1 ring-white/20">Printable</span>
                     </div>
                     <p class="mb-4 text-sm text-slate-200/90">
-                      Click below to download the Word document version of my resume.
+                      Click below to download the less cool Word document version of my resume.
                     </p>
                     <a
                       href="./Oscar_Beckett_CV_2.docx"
